<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/numberButton"
            android:onClick="pressNumber"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/button_border"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="0"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fizzButton"
            android:onClick="pressFizz"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/button_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/champagne100" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/buzzButton"
            android:onClick="pressBuzz"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/button_border"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/lightning100" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fizzBuzzButton"
            android:onClick="pressFizzBuzz"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/button_border"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/space100" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>